<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--THE SWITCH BUTTON -->
    <Switch
        android:id="@+id/btn"
        style="@style/btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <!--THE FIRST_INNER LAYOUT -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/text_style"
            style="@style/text_style"
            android:text="Good morning!"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/first_image"
            style="@style/heart_style"
            android:background="@color/white"
            android:contentDescription="@string/todo"
            android:src="@drawable/hearts"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="205dp"
            tools:layout_editor_absoluteY="1dp" />

        <ImageView
            android:id="@+id/second_image"
            style="@style/menu_style"
            android:contentDescription="@string/todo"
            android:src="@drawable/menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--THE SECOND_INNER LAYOUT -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/search_bar"
            style="@style/search"
            android:autofillHints=""
            android:background="@drawable/search_bg"
            android:drawableStart="@drawable/search"
            android:drawablePadding="10dp"
            android:hint="@string/Search"
            android:inputType=""
            android:padding="20dp" />
    </LinearLayout>


    <!--THE THIRD_INNER LAYOUT AND IT IS A NESTED_SCROLL_VIEW -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView_3"
                style="@style/image"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ellipse" />

            <TextView
                android:id="@+id/text_1"
                style="@style/first_text"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/image_1"
                style="@style/second_text" />


            <TextView
                android:id="@+id/image_2"
                style="@style/third_text"
                android:background="@drawable/box" />

            <Button
                android:id="@+id/image_4"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                style="@style/fourth_style"
                app:backgroundTint="@color/white"
                app:cornerRadius="10dp"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp" />


            <!--THE GRID LAYOUT TO DISPLAY PICTURES-->
            <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10sp"
                android:layout_marginTop="50dp"
                app:columnCount="3"
                app:rowCount="3">

                <ImageView
                    android:id="@+id/imageView"
                    style="@style/style_view"
                    android:layout_marginBottom="20sp"
                    android:contentDescription="@string/first_picture"
                    app:srcCompat="@drawable/first" />

                <ImageView
                    android:id="@+id/imageView2"
                    style="@style/style_view"
                    android:layout_marginBottom="20sp"
                    android:contentDescription="@string/picture_of_a_lady"
                    app:srcCompat="@drawable/second" />

                <ImageView
                    android:id="@+id/imageView3"
                    style="@style/style_view"
                    android:layout_marginBottom="20sp"
                    android:contentDescription="@string/third_picture"
                    app:srcCompat="@drawable/third" />

                <ImageView
                    android:id="@+id/imageView4"
                    style="@style/style_view"
                    android:contentDescription="@string/fourth_picture"
                    app:srcCompat="@drawable/fourth" />

                <ImageView
                    android:id="@+id/imageView5"
                    style="@style/style_view"
                    android:contentDescription="@string/fifth_todo"
                    app:srcCompat="@drawable/fifth" />

                <ImageView
                    android:id="@+id/imageView6"
                    style="@style/style_view"
                    android:contentDescription="@string/sixth_picture"
                    app:srcCompat="@drawable/sixth" />

                <ImageView
                    android:id="@+id/imageView7"
                    style="@style/style_view"
                    android:layout_marginTop="20sp"
                    android:contentDescription="@string/seventh_picture"
                    app:srcCompat="@drawable/seventh" />

                <ImageView
                    android:id="@+id/imageView8"
                    style="@style/style_view"
                    android:layout_marginTop="20sp"
                    android:contentDescription="@string/eight_picture"
                    android:src="@drawable/eight" />

                <ImageView
                    android:id="@+id/imageView9"
                    style="@style/style_view"
                    android:layout_marginTop="20sp"
                    android:contentDescription="@string/ninth_picture"
                    android:src="@drawable/ninth" />

            </androidx.gridlayout.widget.GridLayout>


            <!-- THE LAST BUTTON -->
            <Button
                style="@style/button"
                android:text="@string/see_more"
                app:backgroundTint="@color/white"
                app:cornerRadius="10dp"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</LinearLayout>

